tests/baselines/reference/exportAssignmentConstrainedGenericType.errors.txt
tests/cases/conformance/externalModules/foo_1.ts(2,17): error TS2345: Argument of type '为真' is not assignable to parameter of type '{ a: 文字; b: 数字; }'.


==== tests/cases/conformance/externalModules/foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
    var x = new foo(true); // Should error
                    ~~~~
!!! error TS2345: Argument of type '为真' is not assignable to parameter of type '{ a: 文字; b: 数字; }'.
    var y = new foo({a: "test", b: 42}); // Should be OK
    var z: number = y.test.b;
==== tests/cases/conformance/externalModules/foo_0.ts (0 errors) ====
    class Foo<T extends {a: string; b:number;}>{
    	test: T;
    	constructor(x: T){}
    }
    
    export = Foo;
    